[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5.0", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.5.2", features = ["shell-all", "updater", "os-all", "window-create"] }
# tauri = { version = "1.5.2", features = [ "devtools"] }
fix-path-env = {git = "https://github.com/tauri-apps/fix-path-env-rs"}
rand = "0.8.5"
tokio = {version = "1.34.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
